--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -36,7 +36,8 @@
             android:layout_gravity="center"
             android:layout_margin="30dp"
             android:gravity="center"
-            app:cardBackgroundColor="#fff">
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -76,7 +77,8 @@
             android:layout_gravity="center"
             android:layout_margin="30dp"
             android:gravity="center"
-            app:cardBackgroundColor="#fff">
+            app:cardBackgroundColor="#fff"
+            app:cardCornerRadius="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -100,13 +102,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
                     android:background="@color/colorPrimary"
                     android:elevation="2dp"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:visibility="visible"
-                    android:layout_alignParentLeft="true">
+                    android:visibility="visible">
 
                     <Button
                         android:id="@+id/true_button"
