--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -95,7 +95,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="Setting"
+                android:onClick="onClickScore"
+                android:text="High Score"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:fontFamily="casual" />
